--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "semi": true,
   "tabWidth": 2,
   "printWidth": 100,
-  "singleQuote": false,
+  "singleQuote": true,
   "trailingComma": "none",
   "jsxBracketSameLine": true
 }
