--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
   "plugins": ["react"],
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "no-case-declarations": "off"
+    "no-case-declarations": "off",
+    "react/prop-types": "off"
   }
 }
